Setup of the events

--- a/bag-app/src/components/header/index.scss
+++ b/bag-app/src/components/header/index.scss
@@ -1,4 +1,7 @@
-
+/**
+ * The Header element scss definition as
+ *  specified in the exercise requirements
+ */
 .header {
     width: 100%;
     background-color: #E6E6E6;
@@ -35,15 +38,11 @@
             font-weight: bold;
             margin-bottom: 0;
             align-self: flex-end;
-            justify-self: center;
-
         }
 
         .price {
             font-size: 20px;
             align-self: flex-start;
-            justify-self: center;
-
         }
 
     }
